--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.22.0",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.9"
+    "mongoose": "^6.0.9",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
